# torch-asg

./: .gitignore  README.md  setup.py
doc/: .gitignore  tech_report.tex
torch_asg/: __init__.py  _fac.py  _fcc.py  asg.py
torch_asg/native/: CMakeLists.txt  extension.cpp  force_aligned_lattice.cpp  force_aligned_lattice.h  force_aligned_lattice_gpu.cpp  force_aligned_lattice_gpu.h  force_aligned_lattice_kernel.cu  force_aligned_lattice_kernel.h  fully_connected_lattice.cpp  fully_connected_lattice.h  fully_connected_lattice_gpu.cpp  fully_connected_lattice_gpu.h  streamlined_fast_gpu.cpp  streamlined_fast_gpu.h  torch_asg.cpp  torch_asg_cuda.cpp  torch_asg_cuda_kernel.cu  torch_asg_cuda_kernel.h  utils.cpp  utils.h
torch_asg/test/: test_asg.py
